GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

============================================================

PyKota NEWS :

    - 1.03alpha :
    
        - The installation script now allows to install the sample
          configuration file during first installation.
        
    - 1.02 :
    
        - The installation script now checks for software availability
          and in case a software is missing asks the user if he
          wants to continue with the installation or abort it.
          
        - The configuration file pykota.conf is now expected to be 
          found in /etc instead of in /etc/cups
          The installation script prompts the user to see if he
          wants to move an old configuration file to the new location
          if needed.
          
        - Improved documentation.
        
        - You can now set the tcp/ip port on which the Quota Storage
          Server is listening, see sample configuration file for details.
        
        - Better general error handling.
        
        - Upgrade script for pre 1.01 PostgreSQL database schema is now
          included as well.
        
    - 1.01 :
    
        - The configuration file now accepts an option   
          to choose the recipient(s) of the email messages :
          
            - DevNull means no one will receive them.
            - User means only the user will receive them.
            - Admin means only the admin will receive them.
            - Both means the User and the Admin will receive them.
            
        - The configuration file now uses hard-coded default values
          when an option is not set. See sample configuration file
          for details.
          
        - Manual pages are included since 1.00, but I forgot to    