@@ -109,6 +109,13 @@ define them as external requesters in the PyKota configuration file.
 INSTALLATION:
 =============
 
+WARNING :
+=========
+
+  If you run a PyKota version lower than 1.01, you definitely have to 
+  upgrade you Quota Storage Database. Please read the documentation 
+  included in the initscripts subdirectory first ! 
+  
 Prerequisite : 
 --------------
    
